# Moony-SpriteBatch

./: CMakeLists.txt  LICENSE  README.md
include/: Log.h  SpriteBatch.h  TextureAtlas.h
source/: Example.cpp  Log.h  Sprite.h  SpriteBatch.h  Texture.h  TextureAtlas.h
src/: Directories.h  Example.cpp  TexturePacker.cpp  TexturePacker.h
